frontend/test/should_fail/method_model_inh_ovrrd_failef2.grg
#using "method_model_inh_ovrrd_failef2.gm"
